# modify

./: CMakeLists.txt  light.cpp  main.cpp
includes/: utils.h
includes/glad/: glad.h
libs/: glad.c
